--- a/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/skills/skills.component.html
+++ b/Downloads/frontendargprograma-master/frontEndAngular/porfolio/src/app/componentes/skills/skills.component.html
@@ -21,7 +21,8 @@
         <img [src]="skills.img" class="img-list" alt="">
       </div>
       <div class="content-titulo-barra">
-        <h3 class="titulo-skills">{{skills.titulo}}</h3>      
+        <h3 class="titulo-skills">{{skills.titulo}}</h3>
+        <p>{{skills.descripcion}}</p>      
         <div class="progress">
         <div class="progress-bar progress-bar-striped" role="progressbar" aria-label="Default striped example"
           [style.width.%]="skills.porcentaje" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"><p style="margin: 0;">{{skills.porcentaje}}%</p></div>
@@ -38,12 +39,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="staticBackdropLabel">Editar Skills</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"(click)="formulario.reset()"></button>
       </div>
       <div class="modal-body">
         <form [formGroup]="formulario" (submit)="editarSkills()">
           <label for="exampleFormControlInput1" class="form-label">ID</label>
-          <select class="form-control" formControlName="id" aria-label="Default select example">
+          <select class="form-control" formControlName="id" id="select-id" (change)="mostrarDatos()" aria-label="Default select example">
             <option *ngFor="let skills of skillsList" [value]="skills.id">{{skills.titulo}}</option>
           </select>
           <div class="mb-3">
@@ -52,8 +53,13 @@
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Titulo</label>
-            <input type="text" class="form-control" formControlName="titulo" id="exampleFormControlInput1"
+            <input type="text" class="form-control" formControlName="titulo" id="exampleFormControlInput2"
               placeholder="">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Descripcion</label>
+            <input type="text" class="form-control" formControlName="descripcion" id="exampleFormControlInput3"
+              placdholder="">
           </div>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">porcentaje</label>
@@ -61,7 +67,7 @@
               placeholder="">
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"(click)="formulario.reset()">Cerrar</button>
             <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Guardar cambios</button>
           </div>
         </form>
